<resources>
    <string name="dashboard">Dashboard</string>
    <string name="app_name">Diabetes Data Network</string>

    <string name="activeP">A</string>
    <string name="type1P">T1</string>
    <string name="type2P">T2</string>
    <string name="otherP">O</string>
    <string name="inactiveP">I</string>
    <string name="summaryButton">S</string>

    <string name="signUp">Sign Up</string>
    <string name="loginIn">Login</string>


<string name="welcomeNote">Welcome To Centre Reports for :</string>
    <string name="username">Hi,</string>
    <string name="pieChart">Summary</string>
    <string name="centreReport">Centre Reports</string>
    <string name="patientsContent">Select Value : </string>
    <string name="centreName">Centre :</string>
    <string-array name="patientContentSelectValues">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="open_SideBar">Open</string>
    <string name="close_SideBar">Close</string>
    
    <string-array name="sideBarReportType">
        <item>Home</item>
        <item>Disease Type</item>
        <item>Insulin Regimen</item>
        <item>HbA1c</item>
        <item>BMI SDS</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard_view">dashboard_view</string>

    <!-- Parse IDs-->
    <string name="parse_app_id">qzEScgLL7gN4NgqqxxQpgLnn36M0HIwCju6fIGE1</string>
    <string name="parse_client_id">qSAk5s0cooLgiHVKlcFEHXgANVGXk2wiG8bIRM6C</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>

   <!-- Strings for Settings Activity-->
    <string name="notifications_settings">Set Notifications</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>
</resources>
