<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    android:shrinkColumns="*"
    android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            >
    <TextView
        android:text="@string/totalP"
        android:id="@+id/total"
        android:layout_marginRight="2.5dp"
        android:background="@drawable/style_border"
        android:theme="@style/AppTheme"
        android:clickable="true"
        />

    <TextView
        android:text="@string/activeP"
        android:id="@+id/active"
        android:layout_marginLeft="2.5dp"
        android:background="@drawable/style_border"
        android:theme="@style/AppTheme"
        android:clickable="true"
        />



        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:text="@string/type1P"
                android:id="@+id/type1"
                android:layout_marginRight="2.5dp"
                android:theme="@style/AppTheme"
                android:background="@drawable/style_border"
                android:clickable="true"

                />
    <TextView


        android:text="@string/type2P"
        android:id="@+id/type2"
        android:layout_marginLeft="2.5dp"
        android:theme="@style/AppTheme"
        android:background="@drawable/style_border"
        android:clickable="true"

         />


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            >

            <TextView
                android:theme="@style/AppTheme"
                android:text="@string/otherP"
                android:id="@+id/other"
                android:layout_marginRight="2.5dp"
                android:background="@drawable/style_border"
                android:clickable="true"

                />
    <TextView
        android:text="@string/inactiveP"
        android:id="@+id/inactive"
        android:layout_marginLeft="2.5dp"
       android:theme="@style/AppTheme"
        android:background="@drawable/style_border"
        android:clickable="true"

        />
        </TableRow>

    </TableLayout>


</LinearLayout>
</ScrollView>